[package]
name = "stackql-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.17"
zip = "0.6"
unicode-width = "0.1.10"
postgres = "0.19"
rustyline = "10.0"
tera = "1.19.0"
once_cell = "1.17.0"
tonic = "0.10.2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.3"
log = "0.4"
env_logger = "0.10"